Atualizando projetos e responsivos

--- a/index.html
+++ b/index.html
@@ -149,6 +149,15 @@
                 </div>
             </div>
 
+            <div class="portfolio-box">
+                <img src="./images/portfolio5.png" alt="">
+                <div class="portfolio-layer">
+                    <h4>Landig Page</h4>
+                    <p>Está é uma Landing Page criada com WORDPRESS usando ELEMENTOR - uma combinação perfeita de design envolvente e funcionalidade intuitiva</p>
+                    <a href="https://vidasaudavelcompleta.com" target="_blank"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
         </div>
     </section>
 
