Atualizando HTML - Section Services

--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
                 <i class='bx bx-code-alt'></i>
                 <h3>Desenvolvedor Frontend</h3>
                 <p>
-                Aperfeiçoando minhas habilidades em desenvolvimento web! 🌐👨‍💻 <br>
-                Estou mergulhando no HTML, CSS, JavaScript e GIT, com planos de avançar para React.js em breve. E para aprimorar minha capacidade de projetar interfaces atraentes, estou aprendendo Figma. Além disso, estou animado em explorar o TypeScript e seus recursos poderosos. 🚀
+                    Aperfeiçoando minhas habilidades em desenvolvimento web! 🌐👨‍💻 <br>
+                    Atualmente, estou imerso no universo do HTML, CSS, JavaScript e GIT, com planos de avançar para React.js em breve. Recentemente, adquiri conhecimentos sobre o WordPress, utilizando a poderosa ferramenta Elementor para aprimorar a criação de websites de forma eficaz e visualmente atrativa. E para aprimorar minha capacidade de projetar interfaces atraentes. Além disso, estou animado em explorar o Figma e TypeScript e seus recursos poderosos. Com dedicação e determinação, estou pronto para explorar todas essas ferramentas e tecnologias em constante evolução! 🚀
                 </p>
                 <a href="#" class="btn">Mais informações</a>
             </div>
@@ -100,8 +100,8 @@
                 <i class='bx bx-bar-chart-alt'></i>
                 <h3>Marketing Digital</h3>
                 <p>
-                    Explorando o mundo do Marketing Digital e das Redes Sociais! 📈📱 <br>
-                    Recentemente, dediquei parte do meu tempo ao estudo do tráfego pago e das redes sociais, com o objetivo de me tornar mais qualificado. Embora eu ainda seja um iniciante, estou ansioso para aplicar meus conhecimentos em tecnologia e comunicação. 💻💬
+                    Explorando o Universo do Marketing Digital e das Redes Sociais! 🌐🚀 <br>
+                    Recentemente, mergulhei de cabeça no estudo do tráfego pago e das estratégias de redes sociais por meio do curso "Nômade Milionário," ministrado por Thiago Finch. Minha busca por aprimoramento profissional me levou a essa jornada, visando me tornar mais capacitado e atualizado. Ainda que me considere um aprendiz nesse campo em constante evolução, estou entusiasmado para aplicar os conhecimentos adquiridos no âmbito da tecnologia, comunicação e marketing digital. 📊💬📱
                 </p>
                 <a href="#" class="btn">Mais informações</a>
             </div>
