Atualizado section home

--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
             <h1>Maylon Santos!</h1>
             <h3>E eu sou um <span class="multiple-text"></span></h3>
             <p>                        
-                Atualmente, estou estudando HTML, CSS, JavaScript e planejando avançar para React.js. Além disso, estou aprendendo
-                Figma, para criar designs mais eficientes e ajudar na codificação. Também estou animado para aprender mais sobre
-                TypeScript.
+                Atualmente, estou estudando HTML, CSS, JavaScript e planejando avançar para React.js. Paralelamente, estou dedicado ao aprimoramento do meu inglês, por meio de aulas presenciais.
+                Além disso, estou interessado em aprender Figma, para criar designs mais eficientes e ajudar na codificação. Também estou animado para aprender mais sobre
+                TypeScript. <br>
+                Recentemente, adquiri conhecimentos sobre o WordPress, utilizando a poderosa ferramenta Elementor.
             </p>
             <div class="social-media">
                 <a href="https://api.whatsapp.com/send?phone=5519996349738" target="_blank"><i class='bx bxl-whatsapp'></i></a>
@@ -75,7 +76,7 @@
             <h3>Desenvolvedor Frontend!</h3>
             <p>                
                 Sou um estudante de programação web front-end. Tenho 27 anos e me formei em Comunicação Social (Publicidade e Propaganda).</br> Sou apaixonado por tecnologia e animado para aprender mais sobre o desenvolvimento de websites e aplicações web. Possuo habilidades em design e criatividade, adquiridas na minha formação, e estou ansioso para aplicá-las na programação. Estou comprometido em me tornar um programador capacitado e trabalhar duro para alcançar meus objetivos.</br>
-                Atualmente, estou estudando HTML, CSS, JavaScript e planejando avançar para React.js. Além disso, estou aprendendo Figma, para criar designs mais eficientes e ajudar na codificação. Também estou animado para aprender mais sobre TypeScript. Com minha formação em Comunicação Social, entendo a importância do design e da experiência do usuário e quero trazer essas habilidades para o mundo da programação web. Busco oportunidades para colocar em prática o que aprendi e desenvolver minhas habilidades como programador web front-end.
+                Atualmente, estou estudando HTML, CSS, JavaScript e planejando avançar para React.js. Além disso, estou interessado em aprender Figma, para criar designs mais eficientes e ajudar na codificação. Também estou animado para aprender mais sobre TypeScript. Com minha formação em Comunicação Social, entendo a importância do design e da experiência do usuário e quero trazer essas habilidades para o mundo da programação web. Busco oportunidades para colocar em prática o que aprendi e desenvolver minhas habilidades como programador web front-end.
             </p>
             <a href="#" class="btn">Mais informações</a>
         </div>
